ihb-platform-backend/k8s/rabbitmq/rabbitmq-ingress.yaml
# Ingress для доступа к RabbitMq (внешний хост rabbitmq.arch.homework)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: rabbitmq.arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
